# Taranis-NG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  SECURITY.md  VERSION.md  dev_requirements.txt  git_version.txt  pyproject.toml
src/bots/: __init__.py  app.py  config.py  pyproject.toml  requirements.txt  run.py  setup.cfg
src/bots/api/: __init__.py  bots.py
src/bots/bots/: __init__.py  analyst_bot.py  base_bot.py  config.py  grouping_bot.py  nlp_bot.py  tagging_bot.py  wordlist_updater_bot.py
src/bots/bots/api/: bots.py
src/bots/bots/bots/: __init__.py  analyst_bot.py  base_bot.py  grouping_bot.py  nlp_bot.py  tagging_bot.py  wordlist_updater_bot.py
src/bots/bots/managers/: __init__.py  bots_manager.py  sse_manager.py
src/bots/bots/remote/: core_api.py
src/bots/bots/schema/: acl_entry.py  bot.py  bot_preset.py  role.py  (+5 more)
src/bots/managers/: __init__.py  api_manager.py  auth_manager.py  bots_manager.py  log_manager.py  sse_manager.py
src/bots/remote/: core_api.py
src/bots/schema/: word_list.py
src/bots/tests/: conftest.py  test_api.py
src/collectors/: README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt  run.py  setup.cfg
src/collectors/api/: __init__.py  collectors.py
src/collectors/collectors/: __init__.py  atom_collector.py  base_collector.py  config.py  email_collector.py  manual_collector.py  rss_collector.py  scheduled_tasks_collector.py  slack_collector.py  twitter_collector.py  web_collector.py
src/collectors/managers/: __init__.py  api_manager.py  auth_manager.py  collectors_manager.py  log_manager.py  time_manager.py
src/collectors/remote/: core_api.py
src/collectors/schema/: word_list.py
src/collectors/tests/: conftest.py
src/core/: README.md  __init__.py  app.py  client_secrets.json  config.py  db_migration.py  event_reflector.py  forward.c  manage.py  pyproject.toml  realm-export.json  requirements.txt  run.py  run.wsgi  scheduler.py  setup.cfg  test.py
src/core/api/: __init__.py  analyze.py  assess.py  assets.py  auth.py  bots.py  collectors.py  config.py  dashboard.py  isalive.py  keycloak.py  presenters.py  public_web.py  publish.py  publishers.py  remote.py  sse.py  state.py  user.py
src/core/auth/: README.md  base_authenticator.py  keycloak_authenticator.py  ldap_authenticator.py  oauth2_authenticator.py  openid_authenticator.py  password_authenticator.py  saml_authenticator.py  saml_federation.py  saml_metadata.py  saml_xml.py  test_authenticator.py  url_guard.py
src/core/core/: __init__.py  config.py
src/core/external_data/: cwe_api.py  epss_api.py  euvd_api.py  nvd_api.py  osv_api.py  vuldb_api.py
src/core/managers/: __init__.py  api_manager.py  asset_manager.py  audit_manager.py  auth_manager.py  bots_manager.py  cache_manager.py  collectors_manager.py  crypto_manager.py  db_manager.py  external_auth_manager.py  log_manager.py  presenters_manager.py  public_web_manager.py  publishers_manager.py  remote_manager.py  sse.py  sse_manager.py  state_manager.py  tagcloud_manager.py  time_manager.py  totp_manager.py  webauthn_manager.py
src/core/migrations/: env.py  regenerate.py  regenerate_params.py
src/core/model/: __init__.py  acl_entry.py  address.py  ai_provider.py  apikey.py  asset.py  attribute.py  audit_record.py  auth_provider.py  bot.py  bot_preset.py  bots_node.py  collector.py  collectors_node.py  data_provider.py  enum.py  log_record.py  news_item.py  notification_template.py  organization.py  osint_source.py  parameter.py  parameter_value.py  permission.py  presenter.py  presenters_node.py  product.py  product_type.py  public_web.py  public_web_node.py  publisher.py  publisher_preset.py  publishers_node.py  remote.py  report_item.py  report_item_type.py  role.py  security_settings.py  setting.py  state.py  (+6 more)
src/core/remote/: bots_api.py  collectors_api.py  presenters_api.py  public_web_api.py  publishers_api.py  remote_api.py
src/core/schema/: collector.py  news_item.py  osint_source.py
src/core/scripts/: sample_data.py
src/core/sse/: __init__.py  forward.c  sse.py
src/core/tests/: .env  conftest.py  test_api.py  test_goto_url.py  test_saml_discovery.py  test_saml_federation.py  test_saml_metadata_import.py  test_saml_metadata_schema.py  test_settings.py  test_url_guard.py
src/presenters/: __init__.py  app.py  config.py  pyproject.toml  requirements.txt  run.py  setup.cfg
src/presenters/api/: __init__.py  isalive.py  presenters.py
src/presenters/data/: data.yml
src/presenters/managers/: __init__.py  api_manager.py  auth_manager.py  log_manager.py  presenters_manager.py
src/presenters/presenters/: __init__.py  base_presenter.py  config.py  create_pdf.py  email_presenter.py  html_presenter.py  jinja_filters.py  json_presenter.py  message_presenter.py  misp_presenter.py  pdf_presenter.py  text_presenter.py
src/presenters/schema/: word_list.py
src/presenters/templates/: _text_report.html  bulletin.html  email_body_template.txt  email_subject_template.txt  mastodon_post_template.txt  mastodon_spoiler_template.txt  misp.json  pdf_body_template.html  pdf_footer_template.html  pdf_template.html  template-show-all-data.txt  template.html  template.txt  template_content.html  template_disinfo.html  template_osint.html  varovanie.html  weekly.html
src/presenters/tmp/: body.html  footer.html  header.html
src/public_web/: README.md  __init__.py  pyproject.toml  run.py
src/public_web/lib/: __init__.py  config_reader.py  logger.py
src/publishers/: README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
src/publishers/api/: __init__.py  isalive.py  publishers.py
src/publishers/crypto/: README.md
src/publishers/managers/: __init__.py  api_manager.py  auth_manager.py  log_manager.py  publishers_manager.py
src/publishers/publishers/: __init__.py  base_publisher.py  config.py  email_publisher.py  ftp_publisher.py  mastodon_publisher.py  misp_publisher.py  sftp_publisher.py  twitter_publisher.py  wordpress_publisher.py
src/publishers/tests/: conftest.py  test_api.py
(+999 files in other folders)
