[project]
name = "TARANIS-NG"
version = "26.05.1"
description = "OSINT gathering and analysis tool for CSIRT teams and organisations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "EUPL-1.2" }
authors = [
    { name = "Ján Polonský", email = "jan.polonsky@nbu.gov.sk" },
    { name = "Jaroslav Svoboda", email = "jaroslav.svoboda@cesnet.cz" },
    { name = "Milan Pikula", email = "milan.pikula@nbu.gov.sk" },
    { name = "Dominik Dancs", email = "dominik.dancs@nbu.gov.sk" },
]
keywords = [
    "osint",
    "security",
    "csirt",
    "cert",
    "threat-intelligence",
    "vulnerability-management",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: EUPL-1.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

[project.urls]
"Homepage" = "https://github.com/SK-CERT/Taranis-NG"
"Repository" = "https://github.com/SK-CERT/Taranis-NG"
"Issue Tracker" = "https://github.com/SK-CERT/Taranis-NG/issues"
"Changelog" = "https://github.com/SK-CERT/Taranis-NG/blob/main/CHANGELOG.md"

# Central source of truth for dev/CI tooling versions.
# These pins are kept in lockstep with:
#   - .pre-commit-config.yaml  (ruff-pre-commit / djLint rev: → stripped of leading "v")
#   - .github/workflows/linting.yaml (djlint and ruff versions)
#   - .github/dependabot.yml uv ecosystem entry (auto-bumps these)
# Lockstep is enforced by scripts/check_tool_versions.py (run as a pre-commit hook).
[dependency-groups]
dev = [
    "djlint==1.40.6",
    "ruff==0.15.21",
]

[tool.uv]
required-version = "0.11.19"

# uv workspace: each backend service is an independent member with its own uv.lock.
# The `shared` package is consumed as a path source by all services via their
# own [tool.uv.sources] entries; listing it here makes it a workspace member
# so `uv` commands at the repo root resolve it locally.
[tool.uv.workspace]
members = ["src/shared"]

[tool.ruff]
required-version = "0.15.21"
line-length = 142
target-version = "py313"
fix = true
include = ["src/**/*.py", "src/**/*.wsgi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",  # Ignore except Exception
    "ERA001",  # Found commented-out code
    "TRY300",  # Consider moving this statement to an `else` block of the `try` statement
    "G004",    # Logging statement uses f-string
    "TRY401",  # Redundant exception object included in `logging.exception` call (we have own exception logic)
    "TD003",   # Missing issue link for this TODO
    "FIX002",  # Line contains TODO, consider resolving the issue
    "FBT001",  # Boolean-typed positional argument in function definition (enable True/False parameters)
    "FBT002",  # Boolean default positional argument in function definition
]

[tool.ruff.lint.per-file-ignores]
"docker/gunicorn_conf.py" = ["INP001", "S104"]
"src/collectors/run.py" = ["E402"]
"src/presenters/run.py" = ["E402"]
"src/publishers/run.py" = ["E402"]
"scripts/check_tool_versions.py" = ["T201"]
"scripts/check_shared_lock_consistency.py" = ["T201"]
"scripts/bump_version.py" = ["T201", "S603"]
# test-setup.py: E2E Docker orchestration script — prints status lines (T201,
# like bump_version.py), runs known docker compose subprocesses (S603), opens
# the localhost E2E isalive URL via urllib (S310), uses literal HTTP status
# codes and loop counts (PLR2004), and main() is the standard CLI entry point
# (D103). chmod +x in-tree so the shebang is honored (EXE001 handled by file mode).
"scripts/test-setup.py" = ["T201", "S603", "S310", "PLR2004", "D103"]
# Tests: asserts are the point (S101), magic numbers are fine in fixtures
# (PLR2004), a test directory is not an importable package (INP001), tests
# legitimately reach into module internals (SLF001), test names document
# themselves (D103), and fixture parameters need no annotation (ANN001).
"src/core/tests/**" = ["S101", "PLR2004", "INP001", "SLF001", "D103", "ANN001"]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 35
max-returns = 10
max-statements = 100

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.djlint]
blank_line_after_tag="load,extends,include"
format_js=false
format_css=false
max_line_length=142
use_gitignore=true
files=["src/presenters/templates/**/*.{html,jinja,j2}", "src/gui-v3/index.html"]
extend_exclude="src/gui/"
ignore="H021"
