[project]
name = "TARANIS-NG"
version = "26.05.1"
description = "OSINT gathering and analysis tool for CSIRT teams and organisations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "EUPL-1.2" }
authors = [
    { name = "Ján Polonský", email = "jan.polonsky@nbu.gov.sk" },
    { name = "Jaroslav Svoboda", email = "jaroslav.svoboda@cesnet.cz" },
    { name = "Milan Pikula", email = "milan.pikula@nbu.gov.sk" },
    { name = "Dominik Dancs", email = "dominik.dancs@nbu.gov.sk" },
]
keywords = [
    "osint",
    "security",
    "csirt",
    "cert",
    "threat-intelligence",
    "vulnerability-management",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: EUPL-1.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

[project.urls]
"Homepage" = "https://github.com/SK-CERT/Taranis-NG"
"Repository" = "https://github.com/SK-CERT/Taranis-NG"
"Issue Tracker" = "https://github.com/SK-CERT/Taranis-NG/issues"
"Changelog" = "https://github.com/SK-CERT/Taranis-NG/blob/main/CHANGELOG.md"

# Central source of truth for dev/CI tooling versions.
# These pins are kept in lockstep with:
#   - .pre-commit-config.yaml  (ruff-pre-commit / djLint rev: → stripped of leading "v",
#     ty via astral-sh/ty-pre-commit)
#   - .github/workflows/linting.yaml (djlint and ruff versions)
#   - .github/dependabot.yml uv ecosystem entry (auto-bumps these)
# Lockstep is enforced by scripts/check_tool_versions.py (run as a pre-commit hook).
[dependency-groups]
dev = [
    "djlint==1.40.6",
    "ruff==0.15.21",
    "ty==0.0.57",
]

[tool.uv]
required-version = "0.11.19"

# uv workspace: each backend service is an independent member with its own uv.lock.
# The `shared` package is consumed as a path source by all services via their
# own [tool.uv.sources] entries; listing it here makes it a workspace member
# so `uv` commands at the repo root resolve it locally.
[tool.uv.workspace]
members = ["src/shared"]

[tool.ruff]
required-version = "0.15.21"
line-length = 142
target-version = "py313"
fix = true
include = ["src/**/*.py", "src/**/*.wsgi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",  # Ignore except Exception
    "ERA001",  # Found commented-out code
    "TRY300",  # Consider moving this statement to an `else` block of the `try` statement
    "G004",    # Logging statement uses f-string
    "TRY401",  # Redundant exception object included in `logging.exception` call (we have own exception logic)
    "TD003",   # Missing issue link for this TODO
    "FIX002",  # Line contains TODO, consider resolving the issue
    "FBT001",  # Boolean-typed positional argument in function definition (enable True/False parameters)
    "FBT002",  # Boolean default positional argument in function definition
]

[tool.ruff.lint.per-file-ignores]
"docker/gunicorn_conf.py" = ["INP001", "S104"]
"src/collectors/run.py" = ["E402"]
"src/presenters/run.py" = ["E402"]
"src/publishers/run.py" = ["E402"]
"scripts/check_tool_versions.py" = ["T201"]
"scripts/check_shared_lock_consistency.py" = ["T201"]
"scripts/bump_version.py" = ["T201", "S603"]
# test-setup.py: E2E Docker orchestration script — prints status lines (T201,
# like bump_version.py), runs known docker compose subprocesses (S603), opens
# the localhost E2E isalive URL via urllib (S310), uses literal HTTP status
# codes and loop counts (PLR2004), and main() is the standard CLI entry point
# (D103). chmod +x in-tree so the shebang is honored (EXE001 handled by file mode).
"scripts/test-setup.py" = ["T201", "S603", "S310", "PLR2004", "D103"]
# Tests: asserts are the point (S101), magic numbers are fine in fixtures
# (PLR2004), a test directory is not an importable package (INP001), tests
# legitimately reach into module internals (SLF001), test names document
# themselves (D103), and fixture parameters need no annotation (ANN001).
"src/core/tests/**" = ["S101", "PLR2004", "INP001", "SLF001", "D103", "ANN001"]
"src/core/model/product.py" = ["A002"]
"src/core/api/publish.py" = ["PLC0415"]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 35
max-returns = 10
max-statements = 100

# -- ty (type checker) -------------------------------------------------------
# The project is a monorepo with multiple services under src/. Each service has
# its own flat layout and is not pip-installable individually, so we list every
# service directory as an extra search path for ty's module resolution.
[tool.ty.environment]
python = ".venv"
extra-paths = [
    "src/core",
    "src/shared",
    "src/bots",
    "src/collectors",
    "src/presenters",
    "src/publishers",
    "src/public_web",
]

# The pre-commit ty hook runs on the whole repo by design (it refuses filenames,
# since one file can introduce errors in another via imports). Legacy services
# (bots/collectors/publishers/presenters) still have many well-understood ty
# errors that predate the current staged cleanup. To keep the hook non-blocking
# while those services are cleaned up incrementally, we downgrade the dominant
# legacy rules to warnings so commits pass, then re-tighten each rule back to
# "error" as the corresponding service gets fixed. This is temporary: every
# "warn" here is a TODO to flip back to "error".
[tool.ty.terminal]
error-on-warning = false  # exit 0 even when warning diagnostics are emitted

[tool.ty.rules]
# Re-tighten to "error" once the legacy service owning these patterns is fixed.
unresolved-attribute = "warn"     # self.preset / None-union attrs (bots, collectors)
unresolved-import = "warn"        # .app relative imports (bots, collectors, publishers)
unresolved-reference = "warn"     # module-level name resolution (bots)
invalid-argument-type = "warn"    # HTTPStatus vs int, SchedulerManager interval
invalid-return-type = "warn"     # response.status_code (int) vs HTTPStatus signature
unsupported-operator = "warn"     # str + None / int concatenation in legacy APIs
not-subscriptable = "warn"       # subscripting int/HTTPStatus in legacy code
missing-argument = "warn"        # missing positional args in legacy call sites
invalid-assignment = "warn"      # SSL context assignment (stdlib typing gap)
no-matching-overload = "warn"    # re.search() dynamic pattern typing
not-iterable = "warn"            # SQLAlchemy relationship() -> RelationshipProperty typing gap
invalid-parameter-default = "warn"  # `Node = None` defaults in Flask-RESTful routes
invalid-type-arguments = "warn"  # `dict[int]` missing value type arg
invalid-type-form = "warn"      # lowercase `any` (user meant Any) in annotations
unknown-argument = "warn"       # langchain kwarg drift (model_name vs model)
too-many-positional-arguments = "warn"  # legacy collector call sites passing extra args

# Files excluded from ty's type-checking scope. ty still parses these for
# import resolution when other modules import them, but does not emit
# diagnostics for them. Use sparingly — prefer fixing the code or downgrading
# the rule to "warn" instead.
[tool.ty.src]
exclude = [
    # Contains a backslash inside an f-string expression (line 89), which is
    # invalid syntax on Python 3.10 (added in 3.12). `invalid-syntax` is a hard
    # parse failure that CANNOT be downgraded to a warning via [tool.ty.rules].
    # Excluded from scope until the file is fixed; revisiting this on every
    # cleanup pass is a TODO.
    "src/collectors/collectors/slack_collector.py",
]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.djlint]
blank_line_after_tag="load,extends,include"
format_js=false
format_css=false
max_line_length=142
use_gitignore=true
files=["src/presenters/templates/**/*.{html,jinja,j2}", "src/gui-v3/index.html"]
extend_exclude="src/gui/"
ignore="H021"
