[project]
name = "TARANIS-NG-bots"
version = "v24.11.1"
description = "Taranis-NG Bots service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "Flask==3.1.2",
    "Flask-Cors==6.0.2",
    "Flask-RESTful==0.3.10",
    "gevent==25.9.1",
    "gunicorn==23.0.0",
    "marshmallow==4.1.1",
    "oauthlib==3.3.1",
    "PySocks==1.7.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "schedule==1.2.2",
    "sseclient-py==1.8.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
