[project]
name = "TARANIS-NG-bots"
version = "26.05.1"
description = "Taranis-NG Bots service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.15.0",
    "Flask==3.1.3",
    "Flask-Cors==6.0.5",
    "Flask-RESTful==0.3.10",
    "gevent==26.5.0",
    "gunicorn==26.0.0",
    "marshmallow==4.3.0",
    "oauthlib==3.3.1",
    "PySocks==1.7.1",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "schedule==1.2.2",
    "sseclient-py==1.9.0"
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
