[project]
name = "TARANIS-NG-collectors"
version = "v24.11.1"
description = "Taranis-NG Collectors service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "dateparser==1.2.2",
    "feedparser==6.0.12",
    "Flask==3.1.2",
    "Flask-Cors==6.0.1",
    "Flask-RESTful==0.3.10",
    "gevent==25.9.1",
    "gunicorn==23.0.0",
    "marshmallow==4.1.1",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "schedule==1.2.2",
    "selenium==4.38.0",
    "slackclient==2.9.4",
    "tweepy==4.16.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
