[project]
name = "taranis-ng-collectors"
version = "26.05.1"
description = "Taranis-NG Collectors service."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.15.0",
    "dateparser==1.4.1",
    "feedparser==6.0.12",
    "Flask==3.1.3",
    "Flask-Cors==6.0.5",
    "Flask-RESTful==0.3.10",
    "gevent==26.5.0",
    "gunicorn==26.0.0",
    "marshmallow==4.3.0",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "schedule==1.2.2",
    "selenium==4.46.0",
    "slackclient==2.9.4",
    "tweepy==4.17.0",
    "taranis-ng-shared==26.05.1",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
taranis-ng-shared = { path = "../shared" }
