[project]
name = "TARANIS-NG-core"
version = "26.05.1"
description = "Taranis-NG Core service."
requires-python = ">=3.10"
dependencies = [
    "alembic==1.18.4",
    "beautifulsoup4==4.14.3",
    "Flask==3.1.3",
    "Flask-Cors==6.0.2",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Migrate==4.1.0",
    "flask-oidc==2.4.0",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "gevent==26.4.0",
    "gunicorn==25.3.0",
    "Jinja2==3.1.6",
    "ldap3 @ git+https://github.com/cannatag/ldap3.git@refs/pull/983/head",
    "marshmallow==4.3.0",
    "psycopg[binary]==3.3.4",
    "pycryptodomex==3.23.0",
    "PyJWT==2.12.1",
    "python-dotenv==1.2.2",
    "python-keycloak==7.1.1",
    "redis==7.4.0",
    "requests==2.33.1",
    "schedule==1.2.2",
    "sseclient-py==1.9.0",
    "SQLAlchemy==2.0.49",
    "tqdm==4.67.3",
    "Werkzeug==3.1.8",
    "langchain==1.2.15",
    "langchain-openai==1.2.1",
    "pycountry==26.2.16"
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
