[project]
name = "TARANIS-NG-core"
version = "26.05.1"
description = "Taranis-NG Core service."
requires-python = ">=3.10"
dependencies = [
    "alembic==1.18.5",
    "beautifulsoup4==4.15.0",
    "Flask==3.1.3",
    "Flask-Cors==6.0.5",
    "Flask-JWT-Extended==4.7.4",
    "Flask-Migrate==4.1.0",
    "flask-oidc==2.4.0",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "gevent==26.5.0",
    "gunicorn==26.0.0",
    "Jinja2==3.1.6",
    "ldap3 @ git+https://github.com/cannatag/ldap3.git@refs/pull/983/head",
    "marshmallow==4.3.0",
    "psycopg[binary]==3.3.4",
    "pycryptodomex==3.23.0",
    "PyJWT==2.13.0",
    "python-dotenv==1.2.2",
    "python-keycloak==7.1.1",
    "redis==8.0.1",
    "requests==2.34.2",
    "schedule==1.2.2",
    "sseclient-py==1.9.0",
    "SQLAlchemy==2.0.51",
    "tqdm==4.68.3",
    "Werkzeug==3.1.8",
    "langchain==1.3.11",
    "langchain-openai==1.3.3",
    "pycountry==26.2.16"
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
