[project]
name = "taranis-ng-core"
version = "26.05.1"
description = "Taranis-NG Core service."
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.5",
    "beautifulsoup4==4.15.0",
    "Flask==3.1.3",
    "Flask-Cors==6.0.5",
    "Flask-JWT-Extended==4.7.4",
    "Flask-Migrate==4.1.0",
    "flask-oidc==2.4.0",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "gevent==26.5.0",
    "gunicorn==26.0.0",
    "Jinja2==3.1.6",
    "ldap3==2.10.2rc4",
    "marshmallow==4.3.0",
    "psycopg[binary]==3.3.4",
    "pycryptodomex==3.23.0",
    "PyJWT==2.13.0",
    "python-dotenv==1.2.2",
    "python-keycloak==7.1.1",
    "redis==8.0.1",
    "requests==2.34.2",
    "schedule==1.2.2",
    "sseclient-py==1.9.0",
    "SQLAlchemy==2.0.51",
    "tqdm==4.69.0",
    "Werkzeug==3.1.8",
    "langchain==1.3.13",
    "langchain-openai==1.3.5",
    "pycountry==26.2.16",
    "taranis-ng-shared==26.05.1",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
taranis-ng-shared = { path = "../shared" }
