[project]
name = "TARANIS-NG-presenters"
version = "25.12.1"
description = "Taranis-NG Presenters service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "cvss==3.6",
    "Flask==3.1.2",
    "Flask-Cors==6.0.2",
    "Flask-RESTful==0.3.10",
    "gevent==25.9.1",
    "gunicorn==25.0.3",
    "Jinja2==3.1.6",
    "marshmallow==4.2.2",
    "python-dotenv==1.2.1",
    "weasyprint==68.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
