[project]
name = "taranis-ng-presenters"
version = "26.05.1"
description = "Taranis-NG Presenters service."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.15.0",
    "cvss==3.6",
    "Flask==3.1.3",
    "Flask-Cors==6.0.5",
    "Flask-RESTful==0.3.10",
    "gevent==26.5.0",
    "gunicorn==26.0.0",
    "Jinja2==3.1.6",
    "marshmallow==4.3.0",
    "python-dotenv==1.2.2",
    "weasyprint==69.0",
    "taranis-ng-shared==26.05.1",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
taranis-ng-shared = { path = "../shared" }
