[project]
name = "TARANIS-NG-publishers"
version = "v25.12.1"
description = "Taranis-NG Publishers service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "envelope==2.3.0",
    "Flask==3.1.2",
    "Flask-Cors==6.0.2",
    "Flask-RESTful==0.3.10",
    "gevent==25.9.1",
    "gunicorn==23.0.0",
    "marshmallow==4.2.1",
    "Mastodon.py==2.1.4",
    "paramiko==4.0.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "tweepy==4.16.0",
    "urllib3==2.6.3",
    "pymisp==2.5.32"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
