[project]
name = "TARANIS-NG-publishers"
version = "26.02.1"
description = "Taranis-NG Publishers service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "envelope==2.3.1",
    "Flask==3.1.3",
    "Flask-Cors==6.0.2",
    "Flask-RESTful==0.3.10",
    "gevent==25.9.1",
    "gunicorn==25.1.0",
    "marshmallow==4.2.3",
    "Mastodon.py==2.1.4",
    "paramiko==4.0.0",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "tweepy==4.16.0",
    "urllib3==2.6.3",
    "pymisp==2.5.33.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
