[project]
name = "TARANIS-NG-publishers"
version = "26.05.1"
description = "Taranis-NG Publishers service."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "envelope==2.3.1",
    "Flask==3.1.3",
    "Flask-Cors==6.0.2",
    "Flask-RESTful==0.3.10",
    "gevent==26.4.0",
    "gunicorn==25.3.0",
    "marshmallow==4.3.0",
    "Mastodon.py==2.2.1",
    "paramiko==4.0.0",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "tweepy==4.16.0",
    "urllib3==2.6.3",
    "pymisp==2.5.34.1"
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
